name:                learning
version:             0.1.0.0
synopsis:            Simple API for learning
description:         README.md
homepage:            https://github.com/makelicious/learning#readme
license:             BSD3
license-file:        LICENSE
author:              makelicious
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable learning
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       aeson,
                       scotty,
                       postgresql-simple,
                       postgresql-simple-migration,
                       bytestring
